Added signup link to login page

--- a/port_inspector/port_inspector_app/templates/login.html
+++ b/port_inspector/port_inspector_app/templates/login.html
@@ -79,6 +79,11 @@
       {{ form.as_table }}
       <button class="button">Login</button>
     </form>
+
+    <p style="margin-top: 15px;">
+      Don't have an account?
+      <a href="{% url 'signup' %}" style="color: #007bff; text-decoration: none;">Sign up</a>
+    </p>
   </div>
 </body>
 </html>
