--- a/port_inspector/port_inspector_app/templates/upload_photo.html
+++ b/port_inspector/port_inspector_app/templates/upload_photo.html
@@ -83,7 +83,7 @@
         <a href="/" class="icon">🏠<span>Home</span></a>
         <a href="/history" class="icon">📜<span>History</span></a>
         <a href="/upload" class="icon">📤<span>Upload Photo</span></a>
-        <a href="/logout" class="icon">👤<span>Profile</span></a>
+        <a href="/profile" class="icon">👤<span>Profile</span></a>
         {% if not request.user.is_authenticated %}
         <a href="/login" class="icon">🔒<span>Login</span></a>
         {% endif %}
