fix: getting rid of verify-email-complete

--- a/port_inspector/port_inspector_app/templates/verify-email-done.html
+++ b/port_inspector/port_inspector_app/templates/verify-email-done.html
@@ -1,4 +1,4 @@
-<form method="post" action="{% url 'your-view-name' %}">
+<form method="post" action="{% url 'verify-email-done' %}">
 	{% csrf_token %}
 	<h3>An email has been sent with instructions to verify your email</h3>
   </form>
