Fixed some CSS issues with error display

--- a/port_inspector/port_inspector_app/templates/upload_photo.html
+++ b/port_inspector/port_inspector_app/templates/upload_photo.html
@@ -55,7 +55,7 @@
     form {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
     }
     label {
       margin-top: 20px;
@@ -151,12 +151,36 @@
       border-radius: 5px;
       margin-top: 30px;
     }
+    .form-errors {
+      border: 1px solid #f00;
+      padding: 10px;
+      background-color: #ffe6e6;
+      color: #a00;
+      border-radius: 5px;
+      margin-top: 30px;
+  }
+  .form-errors ul,
+  .form-errors li {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+  }
+  .non-field-error-block {
+    margin-top: 50px;
+    padding-top: 50px;
+  }
+  .field-error:not(:last-of-type) {
+      margin-bottom: 15px;
+  }
+  .error-type-block:not(:last-of-type):has(li) {
+      margin-bottom: 15px
+  }
 
-    footer {
-      margin-top: 20px;
-      font-size: 12px;
-      color: #aaa;
-    }
+  footer {
+    margin-top: 20px;
+    font-size: 12px;
+    color: #aaa;
+  }
   </style>
 </head>
 <body>
@@ -235,31 +259,30 @@
 
     {% if form.errors %}
     <div class="form-errors">
-      <ul>
+        <ul class="error-type-block">
         {% for field in form %}
-        {% if field.errors %}
-        <li><strong>{{ field.label }}:</strong>
-          <ul>
-            {% for error in field.errors %}
-            <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        </li>
-        {% endif %}
+            {% if field.errors %}
+            <li class="field-error"><strong>{{ field.label }}:</strong>
+                <ul>
+                {% for error in field.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+                </ul>
+            </li>
+            {% endif %}
         {% endfor %}
+        </ul>
         {% if form.non_field_errors %}
-        <li><strong>Error:</strong>
-          <ul>
-            {% for error in form.non_field_errors %}
-            <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        </li>
+        <ul class="error-type-block">
+            <li class="non-field-error-block"><strong>Error:</strong></li>
+                {% for error in form.non_field_errors %}
+                <li>{{ error }}</li>
+                {% endfor %}
+        </ul>
         {% endif %}
-      </ul>
+        </ul>
     </div>
     {% endif %}
-  </div>
 
   <footer>
     &copy; 2024 Port Inspector App
