fix: added note to check spam folder upon verifying email

--- a/port_inspector/port_inspector_app/templates/verify-email-done.html
+++ b/port_inspector/port_inspector_app/templates/verify-email-done.html
@@ -1,5 +1,5 @@
 <form method="post" action="{% url 'verify-email-done' %}">
 	{% csrf_token %}
-	<h3>An email has been sent with instructions to verify your email</h3>
+	<h3>An email has been sent with instructions to verify your email. Make sure to check your spam folder!</h3>
   </form>
   
